--- a/style/css/style.css
+++ b/style/css/style.css
@@ -1,2 +1,107 @@
-body {
-  background-color: 0; }
+* {
+  margin: 0;
+  padding: 0; }
+
+article {
+  display: grid;
+  grid-template-columns: repeat(12, 1fr); }
+  article .largeColumn {
+    grid-column: span 12;
+    display: grid; }
+  article .bigColumn {
+    grid-column: span 5;
+    margin-top: 5%; }
+  article .mediumColumn {
+    grid-column: span 4; }
+  article #wallPaper {
+    justify-items: center;
+    align-items: center;
+    min-height: 80vh; }
+  article #category {
+    min-height: 20vh;
+    grid-template-columns: repeat(12, 1fr);
+    display: grid;
+    justify-items: center;
+    align-items: center; }
+  article #donation {
+    min-height: 80vh;
+    grid-template-columns: repeat(12, 1fr);
+    display: grid;
+    background-color: #6a82a0; }
+    article #donation #video {
+      justify-items: center;
+      display: grid; }
+    article #donation .bigColumn:first-child {
+      grid-column: 2 / span 5; }
+    article #donation button {
+      width: 100%;
+      height: 20%;
+      font-size: 2em;
+      color: black;
+      border: 1px solid black; }
+    article #donation p {
+      text-align: center; }
+  article #donationInfo {
+    min-height: 25vh;
+    grid-template-columns: repeat(4, 1fr);
+    grid-column: 2 / span 10; }
+    article #donationInfo .information {
+      display: grid;
+      justify-items: center;
+      align-items: center; }
+  article #gallery {
+    min-height: 30vh;
+    grid-template-columns: repeat(4, 1fr); }
+  article footer {
+    min-height: 25vh;
+    justify-items: center;
+    align-items: center;
+    background-color: #242f41; }
+
+#wrapper {
+  width: 100vw;
+  display: grid;
+  grid-template-columns: 20vw 80vw; }
+  #wrapper h1 {
+    justify-self: center; }
+  #wrapper header {
+    background-color: #6a82a0;
+    height: 25vh;
+    grid-template-columns: repeat(12, 1fr);
+    align-items: center; }
+    #wrapper header img {
+      grid-column: 2 / span 1; }
+    #wrapper header h1 {
+      color: white; }
+  #wrapper nav {
+    grid-column: span 1;
+    min-height: 100vh;
+    display: grid;
+    justify-items: center;
+    background-color: #242f41; }
+    #wrapper nav .menu {
+      list-style-type: none;
+      justify-self: center;
+      position: fixed;
+      top: 50%;
+      left: 3%; }
+      #wrapper nav .menu li {
+        margin: 10%; }
+        #wrapper nav .menu li a {
+          text-decoration: none;
+          color: white; }
+  #wrapper #dashboard {
+    grid-column: span 1;
+    min-height: 100vh;
+    grid-template-rows: 25vh auto auto 15vh; }
+    #wrapper #dashboard .donated {
+      grid-template-rows: 10% 90%;
+      border-bottom: 2px solid #6a82a0; }
+    #wrapper #dashboard .category {
+      justify-items: center;
+      align-items: center;
+      display: grid; }
+    #wrapper #dashboard footer {
+      height: auto;
+      min-height: 0;
+      background-color: #6a82a0; }
