--- a/style/css/style.css
+++ b/style/css/style.css
@@ -2,16 +2,22 @@
   margin: 0;
   padding: 0; }
 
+html {
+  overflow-x: hidden; }
+
 article {
   display: grid;
   grid-template-columns: repeat(12, 1fr); }
   article .largeColumn {
     grid-column: span 12;
     display: grid; }
+  article .biggerColumn {
+    grid-column: span 7; }
+  article .halfColumn {
+    grid-column: span 6; }
   article .bigColumn {
-    grid-column: span 5;
-    margin-top: 5%; }
-  article .mediumColumn {
+    grid-column: span 5; }
+  article .smallColumn {
     grid-column: span 4; }
   article #wallPaper {
     justify-items: center;
@@ -97,10 +103,55 @@ article {
     #wrapper #dashboard .donated {
       grid-template-rows: 10% 90%;
       border-bottom: 2px solid #6a82a0; }
+    #wrapper #dashboard .settings {
+      grid-row: span 2;
+      grid-column: span 6;
+      display: grid;
+      grid-template-rows: auto auto; }
+      #wrapper #dashboard .settings button {
+        background-color: #e0ebf8;
+        grid-column: span 2;
+        justify-self: center;
+        color: black;
+        width: 50%;
+        height: 100%; }
+      #wrapper #dashboard .settings #profile {
+        min-height: 50vh;
+        border-right: 2px solid #6a82a0;
+        border-bottom: 2px solid #6a82a0; }
+      #wrapper #dashboard .settings #fundraise {
+        min-height: 30vh;
+        border-right: 2px solid #6a82a0; }
+      #wrapper #dashboard .settings #goals {
+        min-height: 50vh;
+        border-top: 2px solid #6a82a0;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr); }
+      #wrapper #dashboard .settings #categories {
+        min-height: 30vh;
+        display: grid;
+        grid-template-columns: repeat(3, 1fr); }
+    #wrapper #dashboard .details {
+      grid-template-columns: repeat(12, 1fr); }
+      #wrapper #dashboard .details #time {
+        display: grid;
+        grid-template-rows: repeat(2, 50%);
+        justify-items: center;
+        align-items: center;
+        border-right: 2px solid #6a82a0; }
+      #wrapper #dashboard .details #history {
+        border-right: 2px solid #6a82a0; }
+      #wrapper #dashboard .details #country,
+      #wrapper #dashboard .details #history {
+        display: grid;
+        justify-items: center;
+        align-items: center; }
+      #wrapper #dashboard .details #history,
+      #wrapper #dashboard .details #allDonation {
+        border-top: 2px solid #6a82a0; }
     #wrapper #dashboard .category {
       justify-items: center;
-      align-items: center;
-      display: grid; }
+      align-items: center; }
     #wrapper #dashboard footer {
       height: auto;
       min-height: 0;
