--- a/style/css/style.css
+++ b/style/css/style.css
@@ -16,6 +16,8 @@ html {
   box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
   background-color: blue;
   display: none; }
+  .popUp .textil {
+    display: none; }
 
 article {
   display: grid;
