--- a/style/sass/style.scss
+++ b/style/sass/style.scss
@@ -24,6 +24,10 @@ html {
   box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
   background-color: blue;
   display: none;
+
+  .textil {
+    display: none;
+  }
 }
 
 article {
