--- a/style/sass/style.scss
+++ b/style/sass/style.scss
@@ -2,7 +2,8 @@ $color1: #242f41;
 $color2: #6a82a0;
 $color3: #e0ebf8;
 $color4: #859ab2;
-$color5: #9eb2cb;
+$color5: #9db1cb;
+$color6: #e0ecfc;
 
 @font-face {
   font-family: afta sans;
@@ -98,7 +99,7 @@ article {
     height: 38vw;
     grid-template-columns: repeat(12, 1fr);
     display: grid;
-    background-color: $color2;
+    background-color: $color5;
 
     #video {
       justify-items: center;
@@ -113,12 +114,19 @@ article {
       grid-column: 2 / span 5;
     }
 
+    #donator {
+      margin: 0vw 0 0 3vw;
+    }
+
     button {
-      width: 100%;
-      height: 20%;
+      width: 40vw;
+      height: 6vw;
       font-size: 2em;
-      color: black;
-      border: 1px solid black;
+      margin: 6vw 0 0 0vw;
+      color: #fff;
+      background-color: $color2;
+      border-radius: 0.5vw;
+      border: 1px solid #fff;
       background-image: url(image/givdonationknap.jpg);
       background-size: cover;
     }
@@ -137,12 +145,17 @@ article {
       display: grid;
       justify-items: center;
       align-items: center;
+      width: 10vw;
     }
   }
 
   #gallery {
     min-height: 30vh;
     grid-template-columns: repeat(4, 1fr);
+
+    .imgIndex {
+      width: 25vw;
+    }
   }
 
   footer {
