--- a/style/sass/style.scss
+++ b/style/sass/style.scss
@@ -137,7 +137,7 @@ article {
   }
 
   #donationInfo {
-    min-height: 25vh;
+    height: 19vw;
     grid-template-columns: repeat(4, 1fr);
     grid-column: 2 / span 10;
 
