--- a/style/sass/style.scss
+++ b/style/sass/style.scss
@@ -65,9 +65,9 @@ article {
   #wallPaper {
     justify-items: center;
     align-items: center;
-    height: 28vw;
+    height: 30vw;
     background-color: $color1;
-    background-image: url(./image/header.jpg);
+    background-image: url(../../image/header-01.jpg);
     background-repeat: no-repeat;
     background-size: cover;
 
