--- a/style/sass/style.scss
+++ b/style/sass/style.scss
@@ -14,6 +14,7 @@ $color6: #e0ecfc;
   margin: 0;
   padding: 0;
   font-family: afta sans;
+  font-weight: 100;
 }
 
 html {
@@ -60,6 +61,13 @@ article {
     grid-column: span 3;
     margin: 0 0 0 24vw;
     width: 20vw;
+  }
+
+  .smallColumnDb {
+    grid-column: span 1;
+    margin: 1vw 0 0 10vw;
+    width: 12vw;
+    text-align: center;
   }
 
   #wallPaper {
@@ -121,16 +129,17 @@ article {
     }
 
     button {
-      width: 40vw;
+      width: 31vw;
       height: 6vw;
       font-size: 2em;
       margin: 6vw 0 0 0vw;
       color: #fff;
-      background-color: $color2;
-      border-radius: 0.5vw;
-      border: 1px solid #fff;
-      background-image: url(image/givdonationknap.jpg);
+      background-color: #6a82a0;
+      border-radius: 1.5vw;
+      border: 4px solid #fff;
+      background-image: url(../../image/givdonationknap.jpg);
       background-size: cover;
+      background-repeat: no-repeat;
     }
 
     p {
@@ -172,7 +181,9 @@ article {
     min-height: 25vh;
     justify-items: center;
     align-items: center;
-    background-color: $color1;
+    background-image: url(../../image/footer.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
     color: #fff;
     height: 19vw;
     text-align: center;
@@ -210,14 +221,17 @@ article {
   header {
     background-color: $color2;
     height: 25vh;
-    grid-template-columns: repeat(12, 1fr);
+    grid-template-columns: 5vw 0vw 2vw 20vw;
     align-items: center;
     img {
       grid-column: 2 / span 1;
+      width: 4.5vw;
     }
 
     h1 {
       color: white;
+      font-size: 2vw;
+      font-weight: 100;
     }
     .headerImg {
       width: 100vw;
@@ -230,20 +244,36 @@ article {
     display: grid;
     justify-items: center;
     background-color: $color1;
+    position: fixed;
+    width: 20vw;
+
+    img {
+      width: 13vw;
+      margin: 1vw 0 0 0;
+    }
 
     .menu {
       list-style-type: none;
       justify-self: center;
       position: fixed;
-      top: 50%;
-      left: 3%;
+      width: 19vw;
+      top: 18vw;
+      left: 2vw;
+      font-size: 1.5vw;
 
       li {
-        margin: 10%;
+        margin: 2vw 0 0 1vw;
+        height: 3vw;
+
+        img {
+          width: 2vw;
+        }
 
         a {
           text-decoration: none;
           color: white;
+          justify-items: center;
+          align-items: center;
         }
       }
     }
@@ -251,12 +281,24 @@ article {
 
   #dashboard {
     grid-column: span 1;
+    width: 80vw;
+    margin: 0 0 0 20vw;
     min-height: 100vh;
     grid-template-rows: 25vh auto auto 15vh;
 
     .donated {
-      grid-template-rows: 10% 90%;
+      grid-template-rows: 2vw 15vw;
       border-bottom: 2px solid $color2;
+      color: $color2;
+      margin: 1vw 0 0 0;
+
+      img {
+        width: 11vw;
+      }
+
+      .pengeDb {
+        width: 7vw;
+      }
     }
 
     .settings {
