--- a/style/sass/style.scss
+++ b/style/sass/style.scss
@@ -32,7 +32,33 @@ html {
   background-color: blue;
   display: none;
 
-  .textil {
+  #giveDonation {
+    height: 20%;
+    grid-column: span 2;
+    width: 80%;
+    justify-self: center;
+  }
+
+  .country,
+  .email {
+    width: 100%;
+  }
+
+  #add-cafe-form {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: 60% 40%;
+    height: 100%;
+
+    .left,
+    .right {
+      justify-self: center;
+      height: 80%;
+    }
+  }
+
+  .textil,
+  .pleje {
     display: none;
   }
 }
