--- a/style/css/style.css
+++ b/style/css/style.css
@@ -21,7 +21,25 @@ html {
   box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
   background-color: blue;
   display: none; }
-  .popUp .textil {
+  .popUp #giveDonation {
+    height: 20%;
+    grid-column: span 2;
+    width: 80%;
+    justify-self: center; }
+  .popUp .country,
+  .popUp .email {
+    width: 100%; }
+  .popUp #add-cafe-form {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: 60% 40%;
+    height: 100%; }
+    .popUp #add-cafe-form .left,
+    .popUp #add-cafe-form .right {
+      justify-self: center;
+      height: 80%; }
+  .popUp .textil,
+  .popUp .pleje {
     display: none; }
 
 article {
