--- a/style/css/style.css
+++ b/style/css/style.css
@@ -11,34 +11,172 @@
 html {
   overflow-x: hidden; }
 
+.headerPopUp {
+  height: 11vw;
+  width: 60vw;
+  background-color: #6a82a0; }
+  .headerPopUp img {
+    width: 8vw;
+    margin: 1vw 0 0 26vw; }
+
+.footerPopUp {
+  height: 8vw;
+  width: 60vw;
+  background-color: #6a82a0; }
+
 .popUp {
   position: fixed;
-  width: 80%;
-  top: 10%;
-  left: 10%;
-  height: 80%;
-  -webkit-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
-  -moz-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
-  box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
-  background-color: blue;
+  width: 60vw;
+  top: 2vw;
+  left: 23vw;
+  height: 41vw;
+  background-color: #fff;
   display: none; }
   .popUp #giveDonation {
-    height: 20%;
+    height: 5vw;
     grid-column: span 2;
-    width: 80%;
-    justify-self: center; }
+    width: 24vw;
+    border-radius: 1vw;
+    border: 0.1vw solid #fff;
+    justify-self: center;
+    margin: 1.5vw 0 0 18vw;
+    background-size: cover;
+    background-repeat: no-repeat;
+    color: #fff;
+    font-size: 2vw;
+    background-image: url(../../image/givdonationknap.jpg); }
   .popUp .country,
   .popUp .email {
     width: 100%; }
   .popUp #add-cafe-form {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: 60% 40%;
-    height: 100%; }
-    .popUp #add-cafe-form .left,
-    .popUp #add-cafe-form .right {
-      justify-self: center;
-      height: 80%; }
+    height: 27vw;
+    color: #6a82a0; }
+    .popUp #add-cafe-form .leftForm {
+      width: 24vw;
+      padding: 1vw 0 0 3vw;
+      border-left: 0.2vw solid; }
+      .popUp #add-cafe-form .leftForm .iconDonation {
+        width: 3vw; }
+      .popUp #add-cafe-form .leftForm img {
+        width: 2vw; }
+    .popUp #add-cafe-form .rightForm {
+      width: 25vw;
+      padding: 1vw 0 0 3vw; }
+      .popUp #add-cafe-form .rightForm img {
+        width: 23.3vw; }
+    .popUp #add-cafe-form .navnForm {
+      display: inline-block;
+      width: 10vw; }
+      .popUp #add-cafe-form .navnForm .navnW {
+        width: 9vw;
+        border: 0.1vw solid #6a82a0;
+        height: 2.3vw; }
+    .popUp #add-cafe-form .efternavnForm {
+      display: inline-block;
+      width: 14vw; }
+      .popUp #add-cafe-form .efternavnForm .eNavnW {
+        width: 13vw;
+        border: 0.1vw solid #6a82a0;
+        height: 2.3vw; }
+    .popUp #add-cafe-form .emailW {
+      width: 23.3vw;
+      border: 0.1vw solid #6a82a0;
+      height: 2.3vw; }
+    .popUp #add-cafe-form .landW {
+      width: 23.5vw;
+      padding: 0 0 0 8vw;
+      height: 2vw;
+      color: #6a82a0; }
+    .popUp #add-cafe-form .countryS {
+      color: #6a82a0;
+      padding: 1vw; }
+    .popUp #add-cafe-form .pengePlacering {
+      margin: 0 0 4vw 0;
+      width: 16vw;
+      padding: 0.6vw 0 0.6vw 7.3vw;
+      border: 0.1vw solid #6a82a0;
+      color: #6a82a0;
+      font-size: 1vw; }
+    .popUp #add-cafe-form #betalingDropdown {
+      display: none; }
+    .popUp #add-cafe-form .fuldNavn {
+      width: 16vw;
+      margin: 0 0 0vw 0;
+      padding: 0.2vw 0 0.2vw 7.3vw;
+      border: 0.1vw solid #6a82a0;
+      color: #6a82a0;
+      font-size: 1vw; }
+    .popUp #add-cafe-form .dato {
+      width: 3.85vw;
+      margin: 0 0.5vw 0vw 0;
+      padding: 0.2vw 0 0.2vw 7.3vw;
+      border: 0.1vw solid #6a82a0;
+      color: #6a82a0;
+      font-size: 1vw; }
+    .popUp #add-cafe-form select {
+      /* styling */
+      background-color: white;
+      border: 0.1vw solid #6a82a0;
+      display: inline-block;
+      font: inherit;
+      line-height: 1.5em;
+      padding: 0.5em 3.5em 0.5em 1em;
+      /* reset */
+      margin: 0;
+      -webkit-box-sizing: border-box;
+      -moz-box-sizing: border-box;
+      box-sizing: border-box;
+      -webkit-appearance: none;
+      -moz-appearance: none; }
+    .popUp #add-cafe-form select.minimallandW {
+      background-image: linear-gradient(45deg, transparent 50%, #6a82a0 50%), linear-gradient(135deg, #6a82a0 50%, transparent 50%), linear-gradient(to right, #ccc, #ccc);
+      background-position: calc(100% - 20px) calc(1em + 2px), calc(100% - 15px) calc(1em + 2px), calc(100% - 2.5em) 0.5em;
+      background-size: 5px 5px, 5px 5px, 1px 1.5em;
+      background-repeat: no-repeat;
+      width: 23.4vw;
+      padding: 0.5vw 0 0.5vw 8vw;
+      margin: 0 0 1vw 0;
+      color: #6a82a0; }
+    .popUp #add-cafe-form select.minimallandW:focus {
+      background-image: linear-gradient(45deg, #6a82a0 50%, transparent 50%), linear-gradient(135deg, transparent 50%, #6a82a0 50%), linear-gradient(to right, #ccc, #ccc);
+      background-position: calc(100% - 15px) 1em, calc(100% - 20px) 1em, calc(100% - 2.5em) 0.5em;
+      background-size: 5px 5px, 5px 5px, 1px 1.5em;
+      background-repeat: no-repeat;
+      border-color: #6a82a0;
+      outline: 0; }
+    .popUp #add-cafe-form select.minimalTekstil {
+      background-image: linear-gradient(45deg, transparent 50%, #6a82a0 50%), linear-gradient(135deg, #6a82a0 50%, transparent 50%), linear-gradient(to right, #ccc, #ccc);
+      background-position: calc(100% - 20px) calc(1em + 2px), calc(100% - 15px) calc(1em + 2px), calc(100% - 2.5em) 0.5em;
+      background-size: 5px 5px, 5px 5px, 1px 1.5em;
+      background-repeat: no-repeat;
+      width: 23.4vw;
+      padding: 0.5vw 0 0.5vw 6vw;
+      margin: 0 0 4vw 0;
+      color: #6a82a0; }
+    .popUp #add-cafe-form select.minimalTekstil:focus {
+      background-image: linear-gradient(45deg, #6a82a0 50%, transparent 50%), linear-gradient(135deg, transparent 50%, #6a82a0 50%), linear-gradient(to right, #ccc, #ccc);
+      background-position: calc(100% - 15px) 1em, calc(100% - 20px) 1em, calc(100% - 2.5em) 0.5em;
+      background-size: 5px 5px, 5px 5px, 1px 1.5em;
+      background-repeat: no-repeat;
+      border-color: #6a82a0;
+      outline: 0; }
+    .popUp #add-cafe-form select.minimalFoder {
+      background-image: linear-gradient(45deg, transparent 50%, #6a82a0 50%), linear-gradient(135deg, #6a82a0 50%, transparent 50%), linear-gradient(to right, #ccc, #ccc);
+      background-position: calc(100% - 20px) calc(1em + 2px), calc(100% - 15px) calc(1em + 2px), calc(100% - 2.5em) 0.5em;
+      background-size: 5px 5px, 5px 5px, 1px 1.5em;
+      background-repeat: no-repeat;
+      width: 23.4vw;
+      padding: 0.5vw 0 0.5vw 7vw;
+      color: #6a82a0; }
+    .popUp #add-cafe-form select.minimalFoder:focus {
+      background-image: linear-gradient(45deg, #6a82a0 50%, transparent 50%), linear-gradient(135deg, transparent 50%, #6a82a0 50%), linear-gradient(to right, #ccc, #ccc);
+      background-position: calc(100% - 15px) 1em, calc(100% - 20px) 1em, calc(100% - 2.5em) 0.5em;
+      background-size: 5px 5px, 5px 5px, 1px 1.5em;
+      background-repeat: no-repeat;
+      border-color: #6a82a0;
+      outline: 0; }
   .popUp .textil,
   .popUp .pleje {
     display: none; }
