functions working frontpage & dashboard

--- a/style/css/style.css
+++ b/style/css/style.css
@@ -16,8 +16,8 @@ html {
   width: 60vw;
   background-color: #6a82a0; }
   .headerPopUp img {
-    width: 8vw;
-    margin: 1vw 0 0 26vw; }
+    width: 10vw;
+    margin: 1vw 0 0 25vw; }
 
 .footerPopUp {
   height: 8vw;
@@ -50,7 +50,7 @@ html {
     width: 100%; }
   .popUp #add-cafe-form {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: 50% 50%;
     height: 27vw;
     color: #6a82a0; }
     .popUp #add-cafe-form .leftForm {
