--- a/style/sass/style.scss
+++ b/style/sass/style.scss
@@ -66,7 +66,7 @@ html {
 
   #add-cafe-form {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: 50% 50%;
     height: 27vw;
 
     color: $color2;
