--- a/style/css/style.css
+++ b/style/css/style.css
@@ -11,6 +11,19 @@
 html {
   overflow-x: hidden; }
 
+#login {
+  background-color: #242f41; }
+  #login .wrapper {
+    display: grid;
+    height: 50vh;
+    width: 50vw;
+    margin: 20vh auto;
+    background-color: #242f41; }
+    #login .wrapper img {
+      width: 20%;
+      margin-top: 20px;
+      justify-self: center; }
+
 .headerPopUp {
   height: 11vw;
   width: 60vw;
