--- a/style/sass/style.scss
+++ b/style/sass/style.scss
@@ -81,13 +81,46 @@ html {
   .email {
     width: 100%;
   }
+  .done {
+    display: none;
+    grid-template-columns: repeat(2, 1fr);
+
+    h2,
+    span {
+      grid-column: span 2;
+      justify-self: center;
+    }
+
+    img {
+      width: 50%;
+      justify-self: center;
+      grid-column: span 2;
+    }
+    .buttons {
+      grid-column: span 2;
+      justify-self: center;
+      justify-items: center;
+      width: 52%;
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+    }
+
+    button {
+      height: 7vh;
+      width: 90%;
+      margin-top: 20px;
+    }
+  }
 
   #add-cafe-form {
     display: grid;
     grid-template-columns: 50% 50%;
     height: 27vw;
-
     color: $color2;
+
+    .hidden {
+      display: none;
+    }
 
     .leftForm {
       width: 24vw;
@@ -722,4 +755,8 @@ article {
       background-color: $color2;
     }
   }
+}
+
+.display {
+  display: grid;
 }
