--- a/style/sass/style.scss
+++ b/style/sass/style.scss
@@ -22,18 +22,55 @@ html {
 }
 
 #login {
-  background-color: $color1;
+  background-color: #fff;
   .wrapper {
     display: grid;
     height: 50vh;
     width: 50vw;
-    margin: 20vh auto;
-    background-color: $color1;
+    margin: 0 auto;
+    background-color: #fff;
 
+    .loginBox {
+      width: 33vw;
+      display: grid;
+      margin: 5vw;
+      padding: 0px 0 4vw 7vw;
+      background-color: $color1;
+    }
+    h2 {
+      color: #fff;
+      font-size: 1.2vw;
+      text-align: left;
+    }
+
+    p {
+      color: #fff;
+      font-size: 0.9vw;
+      display: inline-block;
+    }
     img {
-      width: 20%;
-      margin-top: 20px;
-      justify-self: center;
+      width: 15vw;
+      margin: 1vw 0 0 6vw;
+    }
+
+    .pengePlacering {
+      width: 26vw;
+      height: 3vw;
+      font-size: 1vw;
+    }
+
+    button {
+      width: 11vw;
+      height: 2.4vw;
+      font-size: 1.2vw;
+      color: #fff;
+      margin: 0 0.5vw 0 0;
+      background-color: $color1;
+      border: 0.1vw solid #fff;
+    }
+
+    .bottomLogin {
+      width: 40vw;
     }
   }
 }
@@ -58,7 +95,7 @@ html {
   width: 60vw;
   top: 2vw;
   left: 23vw;
-  height: 41vw;
+  height: 43vw;
   background-color: #fff;
   display: none;
 
@@ -89,6 +126,7 @@ html {
     span {
       grid-column: span 2;
       justify-self: center;
+      color: $color2;
     }
 
     img {
@@ -103,12 +141,37 @@ html {
       width: 52%;
       display: grid;
       grid-template-columns: repeat(2, 1fr);
+
+      img {
+        width: 2vw;
+        margin: 0 1vw 0 0;
+      }
+
+      .positionSome {
+        display: inline-block;
+      }
     }
 
-    button {
+    .insta {
       height: 7vh;
-      width: 90%;
-      margin-top: 20px;
+      width: 15vw;
+      border-radius: 1vw;
+      color: #fff;
+      margin-top: 1vw;
+      background-color: #22042d;
+      text-align: left;
+      padding: 0 0 0 3.3vw;
+    }
+
+    .fB {
+      height: 7vh;
+      width: 15vw;
+      border-radius: 1vw;
+      color: #fff;
+      margin-top: 1vw;
+      background-color: #3b589e;
+      text-align: left;
+      padding: 0 0 0 3.2vw;
     }
   }
 
