--- a/style/sass/style.scss
+++ b/style/sass/style.scss
@@ -21,6 +21,12 @@ html {
   overflow-x: hidden;
 }
 
+.testHeight {
+  width: 50px;
+  height: 50px;
+  background-color: green;
+}
+
 #login {
   background-color: $color1;
   .wrapper {
